--- a/build.gradle
+++ b/build.gradle
@@ -82,6 +82,7 @@ project(":core") {
     dependencies {
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
+        api "com.kotcrab.vis:vis-ui:1.3.0"
 
         implementation group: 'com.alibaba', name: 'fastjson', version: '1.2.78'
         implementation group: 'org.freemarker', name: 'freemarker', version: '2.3.31'
