--- a/build.gradle
+++ b/build.gradle
@@ -87,7 +87,7 @@ project(":core") {
         implementation group: 'com.alibaba', name: 'fastjson', version: '1.2.78'
         implementation group: 'org.freemarker', name: 'freemarker', version: '2.3.31'
         implementation group: 'org.javassist', name: 'javassist', version: '3.28.0-GA'
-
+        implementation 'io.netty:netty-all:4.1.44.Final'
 
     }
 }
